feat(扩展功能): 新增提示词导出功能并优化UI交互
添加导出选中提示词功能，支持选择目录批量保存为.md文件
优化清除提示词功能为仅删除选中项而非全部
调整按钮顺序和样式，提升用户体验
添加剪贴板读取权限以支持带[x]标记的提示词自动填充

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "version": "1.0",
   "description": "A Chrome extension for Gemini chat with custom prompts.",
   "permissions": [
+    "clipboardRead",
     "storage"
   ],
   "action": {
